--- a/app/order/conf/dev/conf.yaml
+++ b/app/order/conf/dev/conf.yaml
@@ -10,7 +10,7 @@ kitex:
 
 registry:
   registry_address:
-    - 127.0.0.1:8500
+    - consul:8500
   username: ""
   password: ""
 
@@ -18,7 +18,7 @@ mysql:
   dsn: "%s:%s@tcp(%s:3306)/order?charset=utf8mb4&parseTime=True&loc=Local"
 
 redis:
-  address: "127.0.0.1:6379"
+  address: "redis:6379"
   username: ""
   password: ""
   db: 0
