--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,12 @@ services:
       - MYSQL_DATABASE=demo_proto
     volumes:
       - ./db/sql/ini:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD", "mysqladmin","ping","-h","localhost","-u","root","-proot"]
+      interval: 20s
+      timeout: 10s
+      retries: 5
+      start_period: 2m
   redis:
     image: "redis:latest"
     ports:
@@ -21,6 +27,12 @@ services:
     ports:
       - "4222:4222"
       - "8222:8222"
+  jaeger-all-in-one:
+    image: jaegertracing/all-in-one:latest
+    ports:
+      - "16686:16686"
+      - "4317:4317"
+      - "4318:4318"
   prometheus:
     image: prom/prometheus:latest
     volumes:
@@ -37,3 +49,127 @@ services:
       - GF_AUTH_DISABLE_LOGIN_FORM=true
     ports:
       - "3000:3000"
+  frontend:
+    image: "frontend:latest"
+    ports:
+      - "8080:8080"
+    environment:
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=http://127.0.0.1:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - SESSION_SECRET=1298ASDFASF
+      - GO_ENV=dev
+    depends_on:
+      - consul
+      - redis
+    volumes:
+      - ./app/frontend/conf/dev:/opt/gomall/frontend/conf/dev
+  product:
+    image: "product:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/product/conf/dev:/opt/gomall/product/conf/dev
+  user:
+    image: "user:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/user/conf/dev:/opt/gomall/user/conf/dev
+  cart:
+    image: "cart:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/cart/conf/dev:/opt/gomall/cart/conf/dev
+  checkout:
+    image: "checkout:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/checkout/conf/dev:/opt/gomall/checkout/conf/dev
+  email:
+    image: "email:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/email/conf/dev:/opt/gomall/email/conf/dev
+  order:
+    image: "order:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/order/conf/dev:/opt/gomall/order/conf/dev
+  payment:
+    image: "payment:latest"
+    environment:
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_HOST=mysql
+      - OTEL_EXPORTER_OTLP_TRACES_ENDPOINT=jaeger-all-in-one:4317
+      - OTEL_EXPORTER_OTLP_INSECURE=true
+      - GO_ENV=dev
+    depends_on:
+      consul: 
+        condition: service_started
+      mysql: 
+        condition: service_healthy
+    volumes:
+      - ./app/payment/conf/dev:/opt/gomall/payment/conf/dev
